Ensure all of intro modal content is visible on scroll

--- a/sass/components/_intro-modal.scss
+++ b/sass/components/_intro-modal.scss
@@ -46,7 +46,7 @@ $intro-background-color: #3a3d40;
 		flex-direction: column;
 		justify-content: center;
 		align-items: center;
-		height: 100%;
+		min-height: 100%;
 		position: relative;
 		margin: 0 auto;
 	}
